--- a/navbar/covid/main.css
+++ b/navbar/covid/main.css
@@ -1,3 +1,51 @@
+.covid-home {
+    color: #fff;
+    background-color: #262626;
+    overflow-x: hidden;
+}
+
+.covid-home .br-1 {
+    border-color: #3a3a3a!important;
+}
+
 .ldBar-label{
   font-weight: bold;
+}
+
+.jc-center {
+  justify-content: center;
+}
+
+.br-1 {
+  border-right: 1px solid #ddd;
+}
+
+.v-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.v-center-content {
+  align-content: center;
+  display: grid;
+}
+
+.ldBar {
+  width: initial !important;
+  height: 45px !important;
+}
+
+.covid-home img:hover {
+    transition: 0.5s;
+    opacity: 0.8;
+    cursor: pointer;
+}
+
+.covid-home .green{
+  color: #99ce27;
+}
+
+.covid-home .naranja{
+  color: #ff8d2b;
 }
