--- a/navbar/covid/main.css
+++ b/navbar/covid/main.css
@@ -1,3 +1,7 @@
+body{
+    background-color: #262626;
+}
+
 .covid-home {
     color: #fff;
     background-color: #262626;
@@ -48,4 +52,14 @@
 
 .covid-home .naranja{
   color: #ff8d2b;
+}
+
+.covid-home h6 {
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.covid-home p {
+    text-transform: uppercase;
+    font-size: 12px;
 }
